tests/NormalTests/paczka1/small_fuzzy/12234471.err
Error in line 9: qZoElEedxi SN48 43,3
Error in line 5: 1MCMs1P S548 83,7
Error in line 7: qZoElEedxi S96 91,9
Error in line 6: LHQK S96 51,4
Error in line 3: 0kS79dAhreg S96 83,3
